--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Biberstern</title>
   <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Eczar:800" rel="stylesheet">
-
-    <style>
+  <link rel="icon" type="image/png" href="images/favicon.png" sizes="32x32">
+  <style>
 
         * {
             margin: 0;
@@ -159,8 +159,8 @@
     <!-- Buttons -->
 
     <!-- Je viens -->
-    <audio id="sound1" src="sounds/going.mp3"></audio>
-    <a id="going" onmouseover="document.getElementById('sound1').play()" onmouseout="document.getElementById('sound1').pause(); sound1.currentTime = 0;" href="https://goo.gl/forms/JHH46L9tFvBxQvx92" target="blank"></a>
+    <audio id="sound1" loop src="sounds/going.mp3"></audio>
+    <a id="going" onmouseover="document.getElementById('sound1').play();" onmouseout="document.getElementById('sound1').pause(); sound1.currentTime = 0;" href="https://goo.gl/forms/JHH46L9tFvBxQvx92" target="blank"></a>
 
     <!-- Je viens -->
     <audio id="sound2" src="sounds/not-going.mp3"></audio>
