--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
           Portsall
           <br><br>
           Bus (45mn)
-          <a traget="blank" href="#">Brest - Église de Portsall</a>
+          <a target="blank" href="http://www.cat29.fr/ligne-14.php">Brest - Église de Portsall</a>
           <br><br><br><br>
         </p>
       </div>
