--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
         }
 
         .title  {
-          font-size: 84px;
-          padding-top: 120px;
-          padding-bottom: 40px;
+          font-size: 72px;
+          padding-top: 100px;
         }
         .subtitle {
           font-size: 32px;
@@ -52,14 +51,23 @@
         }
 
         .cta {
-          margin-top: 64px;
+          margin-top: 40px;
         }
 
         .infos-ctn {
+          position: absolute;
+          width: 100%;
+          top: 100%;
           background-color: #F8F8FA;
-          margin-top: 120px;
           padding: 40px 0 100px;
         }
+
+        .scroll {
+          position: absolute;
+          width: 100%;
+          top: -50px;
+        }
+
         .nc {
           font-size: 12px;
           font-weight: 400;
@@ -218,13 +226,16 @@
   <div class="infos-ctn">
     <div class="wrapper">
 
+      <!-- Scroll indicator -->
+      <div class="scroll">⬇</div>
+
       <!-- Infos -->
       <button class="accordion">Venir</button>
       <div class="panel">
         <div class="separator"></div>
         <p>
           Portsall, commune de Ploudalmezeau (29830).<br>
-          Brest - Portsall (30mn) <br>
+          Brest-Portsall (30 mn de route)<br>
           <a href="http://bit.ly/2xSPose" target="blank">Voir carte</a>
           <br><br>
           Train<br>
@@ -267,7 +278,7 @@
         </p>
       </div>
 
-      <button class="accordion">Se ballader</button>
+      <button class="accordion">Se balader</button>
       <div class="panel">
         <div class="separator"></div>
         <p>
