--- a/index.html
+++ b/index.html
@@ -253,6 +253,20 @@
         </p>
       </div>
 
+      <button class="accordion">Se retrouver</button>
+      <div class="panel">
+        <div class="separator"></div>
+        <p>
+          Samedi 3 février<br>
+          à 16h > <a href="http://bit.ly/2AvMKtK" target="blank">Marie de Portsall</a><br>
+          à 19h > au <a href="http://bit.ly/2gSIFv9" target="blank">Récif</a><br><br>
+          <br>
+          Dimanche 4 février<br>
+          de 12h à 14h > <a href="http://bit.ly/2ysNpeS" target="blank">Ty Gwechal</a> à Pospoder
+          <br><br><br><br>
+        </p>
+      </div>
+
       <button class="accordion">Dormir</button>
       <div class="panel">
         <div class="separator"></div>
